[package]
name = "mercatoria_rust"
version = "0.1.0"
authors = ["Jessica Taylor <jessi.liu.taylor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.7"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rand = "0.7"
rmp-serde = "0.15.4"
serde = {version = "1.0", features = ["derive"]}
